schema/testdata/validation_set_increment_decrement_operator/schema.keel
model Post {
    fields {
        views Number
    }

    operations {
        update boostViews(id) {
            @set(post.views += 1)
        }
    }
}
