schema/testdata/errors/set_invalid_operators.keel
model Post {
    fields {
        views Number
    }

    actions {
        update incrementViews(id) {
            //expect-error:18:33:AttributeExpressionError:the @set attribute must be an assignment expression
            @set(post.views += 1)
        }
        update decrementViews(id) {
            //expect-error:18:33:AttributeExpressionError:the @set attribute must be an assignment expression
            @set(post.views -= 1)
        }
        update compareViews(id) {
            //expect-error:18:33:AttributeExpressionError:the @set attribute must be an assignment expression
            @set(post.views == 1)
        }
    }
}
